# CataForge

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  foamy-tumbling-curry.md  pyproject.toml
.cataforge/: PROJECT-STATE.md  framework.json
.cataforge/commands/: bootstrap.md
.cataforge/hooks/: _hook_base.py  detect_correction.py  guard_dangerous.py  hooks.yaml  lint_format.py  log_agent_dispatch.py  notify_done.py  notify_permission.py  session_context.py  validate_agent_result.py
.cataforge/rules/: COMMON-RULES.md
.cataforge/runtime/: __init__.py  conformance.py  deploy.py  frontmatter_translator.py  hook_bridge.py  profile_loader.py  result_parser.py  template_renderer.py  types.py
.claude/: compat-matrix.json  framework.json  settings.json  upgrade-source.json
.claude/hooks/: _hook_base.py  detect_correction.py  guard_dangerous.py  lint_format.py  log_agent_dispatch.py  notify_done.py  notify_permission.py  session_context.py  validate_agent_result.py
.claude/rules/: COMMON-RULES.md  ORCHESTRATOR-PROTOCOLS.md
.claude/scripts/: _common.py  _config.py  _patterns.py  _upgrade_local.py  _upgrade_remote.py  _upgrade_verify.py  _version.py  _yaml_parser.py  build_doc_index.py  check-upgrade.py  event_logger.py  load_section.py  phase_reader.py  post_upgrade_check.py  setup-penpot-mcp.sh  setup.py  setup_penpot.py  upgrade.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  feedback-from-cli.yml
.github/workflows/: anti-rot.yml  no-dogfood-leak.yml  pr-title.yml  publish.yml  release.yml  scaffold-sync.yml  test.yml
changelog.d/: .template.md.j2  84.md  85.md  87.md  88.md  89.md  91.md  93.md  README.md  feat-bootstrap-default-gitattributes.md  feat-doc-review-inline-fix-option.md  feat-feedback-labels-sync-main-claude-md-hygiene.md  feat-orchestrator-truncation-recovery.md  feat-sprint-review-project-features.md  feat-tdd-engine-mid-progress-contract.md  feat-tech-lead-tool-budget.md  feat-test-writer-quality-checklist.md  feedback-workflow.md  fix-doc-naming-bugs.md  fix-event-log-session-end.md  fix-reflector-front-matter.md  fix-symlink-or-copy-junction.md
docs/: EVENT-LOG.jsonl  README.md  agents-and-skills.md  contributing.md  faq.md  manual-verification-guide.md  workflow.md
docs/architecture/: overview.md  platform-adaptation.md  quality-and-learning.md  runtime-workflow.md
docs/assets/: design-tokens.md  svg-prompt-template.md
docs/cross-platform/: INCONSISTENCIES.md  ROADMAP.md  phase-0-directory-restructure.md  phase-0-platform-validation.md  phase-1-override-mechanism.md  phase-1-runtime-extraction.md  phase-2-adapters.md  phase-2-directory-restructure.md  phase-3-adapters.md  phase-3-hook-bridge.md  phase-4-hook-bridge.md  phase-4-validation.md  phase-5-validation.md
docs/getting-started/: installation.md  quick-start.md  troubleshooting.md
docs/guide/: execution-modes.md  manual-verification.md  platforms.md  tdd-workflow.md  upgrade.md  verify-cases.md  verify-per-platform.md  verify-topics.md
docs/reference/: agents-and-skills.md  cli.md  configuration.md  quick-reference.md  status-codes.md
scripts/: gen_cli_reference.py  hatch_build.py  sync_scaffold.py
scripts/checks/: check_changelog_fragments.py  check_changelog_link_table.py  check_doc_versions.py  check_hooks_yaml_schema.py  check_no_design_residue.py  check_no_dev_branch_refs.py  check_no_marketing_words.py  check_profile_yaml_keys.py  check_schema_python_parity.py  check_skill_count.py
src/cataforge/: __init__.py  __main__.py
tests/: conftest.py  test_dep_analysis.py  test_detect_correction.py  test_doc_check.py  test_event_logger.py  test_event_sequence.py  test_framework_integrity.py  test_guard_dangerous.py  test_load_section.py  test_log_agent_dispatch.py  test_migration_checks.py  test_phase_reader.py  test_prompt_snapshot.py  test_run_utf8.py  test_scaffold_sync.py  test_scripts_stdio_guard.py  test_session_context.py  test_setup.py  test_setup_env_block.py  test_sprint_check.py  test_stdin_read_guard.py  test_upgrade_merge.py  test_upgrade_self_reexec.py  test_upgrade_utils.py  test_upgrade_verify.py  test_validate_agent_result.py
tests/agent/: conftest.py  test_translator.py
tests/cli/: test_bootstrap_cmd.py  test_claude_md_cmd.py  test_cli_smoke.py  test_correction_cmd.py  test_docs_aliases_xref.py  test_docs_indexer.py  test_docs_loader.py  test_docs_migrate_nav.py  test_docs_migrate_reviews.py  test_docs_validate.py  test_doctor_anti_rot.py  test_doctor_claude_md_hygiene.py  test_doctor_event_log_schema.py  test_doctor_exit_code.py  test_doctor_hook_importability.py  test_doctor_provenance.py  test_doctor_review_layer1.py  test_event_cmd.py  test_feedback_cmd.py  test_feedback_label_fallback.py  test_hook_cmd.py  test_issue_cmd.py  test_issue_triage_cmd.py  test_sync_main_cmd.py  test_upgrade_cmd.py
tests/core/: test_claude_md_hygiene.py  test_config.py  test_config_feedback.py  test_config_roundtrip.py  test_corrections.py  test_event_log.py  test_event_log_schema_sync.py  test_events.py  test_feedback.py  test_io.py  test_scaffold.py
tests/deploy/: test_cursor_isolation.py  test_deploy_check_paths.py  test_deployer.py
tests/e2e/: conftest.py  test_cross_version_upgrade.py  test_docs_nav.py  test_install_and_upgrade.py
tests/hook/: conftest.py  test_bridge.py  test_bridge_skips.py  test_custom_hooks.py  test_detect_review_flag.py  test_hook_main_errorlog.py  test_opencode_plugin.py  test_script_contract.py  test_script_filters.py
tests/mcp/: test_registry.py
tests/platform/: conftest.py  test_adapter.py  test_conformance.py  test_context_injection.py  test_deploy_prune.py  test_on_conflict.py  test_section_merge.py  test_symlink_or_copy.py
tests/plugin/: test_loader.py
tests/schema/: test_frontmatter.py  test_schema_python_parity.py
tests/skill/: test_doc_review_template_fallback.py  test_framework_feedback_skill.py  test_runner.py  (+7 more)
(+289 files in other folders)
