[project]
name = "cataforge"
version = "0.10.0"
description = "AI 驱动的全生命周期软件开发工作流框架"
license = {text = "MIT"}
requires-python = ">=3.8"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/lync-cyber/CataForge"
Repository = "https://github.com/lync-cyber/CataForge"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
filterwarnings = [
    # pydantic v1 兼容层在 Python 3.14+ 触发警告（langsmith 依赖）
    "ignore:Core Pydantic V1 functionality:UserWarning:langsmith",
]
