[project]
name = "cataforge"
dynamic = ["version"]
description = "AI Programming: Agent + Skill Workflow Framework — one .cataforge/ spec, many IDEs (Claude Code, Cursor, Codex, OpenCode)."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "huancheng.lin", email = "huancheng.lin@foxmail.com" },
]
maintainers = [
    { name = "huancheng.lin", email = "huancheng.lin@foxmail.com" },
]
keywords = [
    "ai",
    "agent",
    "skill",
    "workflow",
    "claude-code",
    "cursor",
    "codex",
    "opencode",
    "mcp",
    "tdd",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Environment :: Console",
    "Natural Language :: Chinese (Simplified)",
    "Natural Language :: English",
]
dependencies = [
    "pyyaml>=6.0",
    "click>=8.0",
    "pydantic>=2.0",
    "markdown-it-py>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "build>=1.2",
    "twine>=5.0",
]
mcp = ["mcp>=1.0"]
docker = ["docker>=7.0"]
penpot = ["docker>=7.0"]
all = ["docker>=7.0", "mcp>=1.0"]

[project.urls]
Homepage = "https://github.com/lync-cyber/CataForge"
Repository = "https://github.com/lync-cyber/CataForge"
Issues = "https://github.com/lync-cyber/CataForge/issues"
Documentation = "https://github.com/lync-cyber/CataForge/tree/main/docs"
Changelog = "https://github.com/lync-cyber/CataForge/releases"

[project.scripts]
cataforge = "cataforge.cli.main:cli"

[project.entry-points."cataforge.platforms"]
claude-code = "cataforge.platform.claude_code:ClaudeCodeAdapter"
cursor = "cataforge.platform.cursor:CursorAdapter"
codex = "cataforge.platform.codex:CodexAdapter"
opencode = "cataforge.platform.opencode:OpenCodeAdapter"

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/cataforge/__init__.py"

[tool.hatch.build.targets.wheel]
# Ships everything under src/cataforge plus the canonical `.cataforge/`
# scaffold (agents / skills / rules / hooks / platform profiles / schemas
# / templates) packaged via force-include below — single source of truth,
# no maintained mirror.
packages = ["src/cataforge"]

[tool.hatch.build.targets.wheel.force-include]
# Pack repo-root `.cataforge/` into the wheel as cataforge/_dot_cataforge/
# so the runtime can resolve it via `importlib.resources.files("cataforge")`
# .joinpath("_dot_cataforge"). Replaces the previous "sync to
# src/cataforge/_assets/cataforge_scaffold/" mirror approach (PR #84).
".cataforge" = "cataforge/_dot_cataforge"

[tool.hatch.build.targets.editable.force-include]
# Editable installs (`pip install -e .`) need the same mapping so
# `cataforge setup` etc. can resolve the scaffold without a wheel build.
".cataforge" = "cataforge/_dot_cataforge"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/docs",
    "/scripts",
    "/.cataforge",
    "/README.md",
    "/LICENSE",
    "/pyproject.toml",
]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "slow: end-to-end tests that build a wheel, spawn a venv, or hit PyPI — opt out with `pytest -m 'not slow'`",
    "network: tests that reach external services (e.g. PyPI); gated by CATAFORGE_E2E_NETWORK=1",
]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
